RESOLVED FIXED41221
[GTK] Pasteboard code does not take into account the nil character when getting and setting markup/netscape-url data
https://bugs.webkit.org/show_bug.cgi?id=41221
Summary [GTK] Pasteboard code does not take into account the nil character when getti...
Martin Robinson
Reported 2010-06-25 11:43:49 PDT
This can be demonstrating by pasting some markup from an editable div from another browser into GtkLauncher.
Attachments
Patch (11.25 KB, patch)
2010-06-25 12:03 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-06-25 12:03:07 PDT
Xan Lopez
Comment 2 2010-06-25 12:44:26 PDT
Comment on attachment 59785 [details] Patch r=me
Martin Robinson
Comment 3 2010-06-25 12:50:14 PDT
Comment on attachment 59785 [details] Patch Clearing flags on attachment: 59785 Committed r61881: <http://trac.webkit.org/changeset/61881>
Martin Robinson
Comment 4 2010-06-25 12:50:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.